# module213

./: .gitignore
task_1/: main.py  pyproject.toml  readme.md
task_1/src/conf/: config.py
task_1/src/database/: models.py
task_1/src/repository/: contacts.py  users.py
task_1/src/routes/: auth.py  contacts.py  users.py
task_1/src/services/: auth.py  email.py  test.py
task_2/: pyproject.toml  readme.md
task_2/quotes/quoteapp/: admin.py  forms.py  models.py  scraper.py  urls.py  views.py
task_2/quotes/quoteapp/migrations/: 0001_initial.py  0002_rename_autor_quote_author.py  0003_alter_tag_name.py
task_2/quotes/quoteapp/templates/quoteapp/: about.html  author.html  base.html  index.html  quote.html  quotes_by_tag.html  scraper.html  tag.html
task_2/quotes/quotes/: settings.py  urls.py
task_2/quotes/users/: forms.py  urls.py  views.py
task_2/quotes/users/templates/users/: login.html  logout.html  register.html
